   as this is more readable.
 * debugprint new param stop_on_name=[False, True]. If True, we don't print
   anything below an intermediate variable that has a name. Defaults to False.
 * debugprint does not print anymore the "|" symbol in a column after the last input.
 * If you use Enthought Python Distribution (EPD) now we use its blas
   implementation by default.

Sparse Sandbox Addition (Not reviewed/documented/tested, but used by some people)
 * They are all in the theano.sparse.sandbox.sp2 module
 * Op class: Cast, Poisson, Multinomial, EliminateZeros, Sum, Binomial
 * Op class: SamplingDot, SamplingDotCsr (inserted automatically)
 * Op function: structured_sigmoid, structured_exp, structured_pow, structured_minimum
 * Op class: StructuredAddSV, StrucutedAddSVCSR (inserted automatically)
 * opt: local_sampling_dot_csr, local_structured_add_s_v

Internal changes
 * Define new exceptions MissingInputError and UnusedInputError, and use them
   in theano.function, instead of TypeError and ValueError. (Pascal L.)

Crash Fix
 * Do not try to use the BLAS library when blas.ldflags is manually set to an
   empty string (Frederic B.)
 * When importing theano on a computer without GPU with the Theano
   flags 'device' or 'init_gpu_device' set to gpu* (Frederic B., reported by  Luo Heng)


=============
Release Notes
=============

Theano 0.5 (23 February 2012)
=============================

Highlight:
 * Moved to github: http://github.com/Theano/Theano/
 * Old trac ticket moved to assembla ticket: http://www.assembla.com/spaces/theano/tickets
 * Theano vision: http://deeplearning.net/software/theano/introduction.html#theano-vision (Many people)
 * Theano with GPU works in some cases on Windows now. Still experimental. (Sebastian Urban)
 * Faster dot() call: New/Better direct call to cpu and gpu ger, gemv, gemm
   and dot(vector, vector). (James, Frédéric, Pascal)
 * C implementation of Alloc. (James, Pascal)