@@ -15,7 +15,7 @@ import theano
 import theano.sparse
 from theano import sparse, gof, Op, tensor
 from theano.gof.python25 import all, any
-
+from theano.sparse.basic import Remove0, remove0
 
 def register_specialize(lopt, *tags, **kwargs):
     theano.compile.optdb['specialize'].register(
@@ -277,46 +277,6 @@ def col_scale(x, s):
 
 def row_scale(x, s):
     return col_scale(x.T, s).T
-
-
-class Remove0(Op):
-    """
-    Remove explicit zeros from a sparse matrix, and resort indices
-    """
-
-    def __init__(self, inplace=False, *args, **kwargs):
-        Op.__init__(self, *args, **kwargs)
-        self.inplace = inplace
-        if self.inplace:
-            self.destroy_map = {0: [0]}
-
-    def __eq__(self, other):
-        return type(self) == type(other) and self.inplace == other.inplace
-
-    def __hash__(self):
-        return 64153 ^ hash(type(self)) ^ hash(self.inplace)
-
-    def __str__(self):
-        l = []
-        if self.inplace:
-            l.append('inplace')
-        return self.__class__.__name__ + '{%s}' % ', '.join(l)
-
-    def make_node(self, x):
-        return gof.Apply(self, [x], [x.type()])
-
-    def perform(self, node, (x,), (z,)):
-        if self.inplace:
-            c = x
-        else:
-            c = x.copy()
-        c.eliminate_zeros()
-        z[0] = c
-
-    def grad(self, (x,), (gz,)):
-        return [gz]
-
-remove0 = Remove0()
 
 
 class EnsureSortedIndices(Op):
