@@ -24,7 +24,7 @@ from theano.sparse import as_sparse_variable, CSC, CSR, CSM, CSMProperties
 from theano.sparse import SparseType, CSMGrad
 from theano.sparse import StructuredDot, StructuredDotCSC
 from theano.sparse import StructuredDotGradCSC, StructuredDotGradCSR
-from theano.sparse import AddSS, AddSD, MulSS, MulSD, Transpose, Neg
+from theano.sparse import AddSS, AddSD, MulSS, MulSD, Transpose, Neg, Remove0
 from theano.sparse import add, mul, structured_dot, transpose
 from theano.sparse import (csc_from_dense, csr_from_dense, dense_from_sparse,
         SparseFromDense)
@@ -228,6 +228,14 @@ class SparseInferShapeTester(utt.InferShapeTester):
                                config.floatX, 3)),
                  numpy.random.randn(10, 40).astype(config.floatX)],
                 MulSD)
+
+    def test_remove0(self):
+        x = SparseType('csr', dtype=config.floatX)()
+        self._compile_and_check([x],
+                                [Remove0()(x)],
+                                [sp.csr_matrix(random_lil((10, 40),
+                                               config.floatX, 3))],
+                                Remove0)
 
     def test_dot(self):
         x = SparseType('csc', dtype=config.floatX)()
@@ -1158,6 +1166,49 @@ def test_size():
         check()
         y[0, 1] = 0
         check()
+
+
+def test_remove0():
+    print
+    print 'test_remove0()'
+    configs = [
+        # structure type, numpy matching class
+        ('csc', scipy.sparse.csc_matrix),
+        ('csr', scipy.sparse.csr_matrix),
+        ]
+    for format, matrix_class in configs:
+        print ('config: format=\'%(format)s\','
+               ' matrix_class=%(matrix_class)s' % locals())
+        # real
+        origin = (numpy.arange(9) + 1).reshape((3, 3)).astype(config.floatX)
+        mat = matrix_class(origin).astype(theano.config.floatX)
+
+        mat[0, 1] = mat[1, 0] = mat[2, 2] = 0
+
+        assert mat.size == 9
+
+        # symbolic
+        x = theano.sparse.SparseType(format=format, dtype=config.floatX)()
+        # the In thingy has to be there because theano has as rule not
+        # to optimize inputs
+        f = theano.function([theano.In(x, borrow=True, mutable=True)],
+                            Remove0()(x))
+
+        # assert optimization is applied in modes with optimization
+        if theano.config.mode not in ['FAST_COMPILE']:
+            # list of apply nodes in the optimized graph.
+            nodes = f.maker.env.toposort()
+            v = [True for node in nodes
+                 if isinstance(node.op, Remove0) and node.op.inplace]
+            assert len(v), 'Inplacing optimization should have been applied.'
+
+        # checking
+        # makes sense to change its name
+        target = mat
+        result = f(mat)
+        mat.eliminate_zeros()
+        msg = 'Matrices sizes differ. Have zeros been removed ?'
+        assert result.size == target.size, msg
 
 
 class Test_getitem(unittest.TestCase):
